<resources>
    <string name="app_name">CactusNotes</string>
    <string name="sign_up">SIGN UP</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="e_mail">E-mail</string>
    <string name="already_have_an_account">ALREADY HAVE AN ACCOUNT?</string>
    <string name="e_mail_or_username">E-mail or Username</string>
    <string name="log_in">LOG IN</string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
</resources>